<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_calculator"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        android:gravity="bottom|right"
        android:textColor="#FFFFFF"
        android:textSize="90sp" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:gravity="start"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:text="565656" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        app:columnCount="4"
        app:columnOrderPreserved="false"
        app:rowCount="5">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="5dp"
            android:background="@drawable/button_bg"
            android:onClick="onClickAC"
            android:text="@string/ac"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="5dp"
            android:background="@drawable/button_bg"
            android:onClick="onClickMinus"
            android:text="@string/minus_or_plus"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_bg"
            android:onClick="onClickSign"
            android:text="@string/remainder"
            android:textColor="@color/black"
            android:textSize="35dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/sign_bg"

            android:onClick="onClickSign"
            android:text="@string/devision"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_7"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_8"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_9"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="5dp"
            android:background="@drawable/sign_bg"

            android:onClick="onClickSign"
            android:text="@string/x"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_4"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_5"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_6"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/sign_bg"

            android:onClick="onClickSign"
            android:text="@string/minus"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_1"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_2"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_3"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/sign_bg"

            android:onClick="onClickSign"
            android:text="@string/plus"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/_0"
            android:textSize="35sp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/numbers_bg"
            android:onClick="onClickNumbers"
            android:text="@string/point"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/sign_bg"
            android:onClick="onClickEqual"
            android:text="@string/equal"
            android:textSize="35sp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>